# gitnote

./: .gitignore  CMakeLists.txt  readme.md  todo.md  version.h.in
textedit/: CMakeLists.txt  dialogauthssl.cpp  dialogauthssl.h  dialogauthssl.ui  dialoggitremote.cpp  dialoggitremote.h  dialoggitremote.ui  dialoggitremoteadd.cpp  dialoggitremoteadd.h  dialoggitremoteadd.ui  dialoggitremoteedit.cpp  dialoggitremoteedit.h  dialoggitremoteedit.ui  dialoggitstatus.cpp  dialoggitstatus.h  dialoggitstatus.ui  main.cpp  textedit.cpp  textedit.h  textedit.ui  textedit_zh.qm  textedit_zh.ts
textedit/gngit/: CMakeLists.txt  auth.c  auth.h  mergeaux.cpp  repo.cpp  repo.h
